add verification on name field

--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -4,7 +4,10 @@
         <div class="form-group">
             <label for="name">Name</label>
             <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name"
-                    type="number" min="3" max="300"/>
+                     required #nameField="ngModel" />
+            <div [hidden]="nameField.valid || nameField.untouched" class="alert alert-danger">
+                Enter a name
+            </div>
         </div>
 
         <div class="form-check form-group">
@@ -53,7 +56,3 @@
         <button class="btn btn-primary" >Send</button>
     </form>
 </div>
-
-<h3>{{ userSettings | json }}</h3>
-
-<h2>{{ originalUserSettings | json }}</h2>
